added login form elements

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">InstaFire</string>
+    <string name="button">Button</string>
+    <string name="password">password</string>
+    <string name="email">email</string>
+    <string name="login">Login</string>
 </resources>
