--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="login">Login</string>
     <string name="profile">Profile</string>
     <string name="logout">Logout</string>
+    <string name="textview">TextView</string>
+    <string name="_31_minutes_ago">31 minutes ago</string>
+    <string name="todo">TODO</string>
+    <string name="description">description</string>
 </resources>
