add a floating action button to the main screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="_31_minutes_ago">31 minutes ago</string>
     <string name="todo">TODO</string>
     <string name="description">description</string>
+    <string name="choose_image">Choose Image</string>
 </resources>
